# weather

./: .gitignore  .mailmap  INSTALLERA.txt  Makefile  README.md  hej.c  index.js  json_parser.c  json_parser.h  main.c  vader  weather.c  weather.h
tests/: test_basic.c
vädersystem/: .gitignore  .mailmap  ARKITEKTUR.md  CMakeLists.txt  INSTALLERA.txt  README.md  TESTRAPPORT.md  TEST_INSTRUKTIONER.md  UTVECKLING.md  vader.sh  weather_client  weather_client_cpp  weather_server  ÖVERSÄTTNING_SLUTFÖRD.md  ÖVERSÄTTNING_STATUS.md
vädersystem/Server/: CMakeLists.txt  build.sh  h  lara.c  main.c  server.c  weather_server
vädersystem/Server/include/: http_server.h  json_helper.h  tcp_server.h  vader_api.h
vädersystem/Server/src/: cache.c  http_server.c  main_binary.c.backup
vädersystem/client/: Makefile  README.md  main.c  weather_client.c  weather_client.cpp  weather_client_esp32.c  weather_client_standalone.cpp
vädersystem/docs/: ANVANDNING.md  API_GUIDE.md  API_NYCKEL_GUIDE.md  README.md
vädersystem/gemensam/include/: natverks_abstraktion.h  vaderprotokoll.h
vädersystem/include/: cache.h  http_server.h  json_helper.h  konfiguration.h  loggning.h  natverks_abstraktion.h  vaderprotokoll.h
vädersystem/klient_c/: CMakeLists.txt
vädersystem/klient_c/src/: main_binary.c.backup
vädersystem/klient_cpp/: CMakeLists.txt
vädersystem/klient_cpp/src/: main.cpp  main_binary.cpp.backup
vädersystem/libs/: HTTP.c  HTTP.h  TCP.c  TCP.h  cache.c  cache.h  utils.h
vädersystem/src/: json_helper.c  loggning.c  main.c  tcp_server.c  vader_api.c
vädersystem/tests/: CMakeLists.txt  run_all_tests.sh  test_http.c  test_json.c  test_protokoll.c
